// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateI18nBlogCategories (formatted) > should match snapshot 1`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_EMPTY_BLOG_CATEGORIES_MIN = {} as const satisfies BlogCategoriesArtifact;
type EmptyString = '';
type SubcategoriesMetadatas = Record<'title' | 'meta-description', EmptyString>;
type CategoriesMetadatas = Record<'_title' | '_meta-description', EmptyString> | Record<string, SubcategoriesMetadatas>;
type BlogCategoriesArtifact = Record<string, CategoriesMetadatas>;
export default FAKE_EMPTY_BLOG_CATEGORIES_MIN;
"
`;

exports[`generateI18nBlogCategories (formatted) > should match snapshot 2`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_NOT_EMPTY_BLOG_CATEGORIES_MIN_FAKE_BLOG_METADATAS_A = {
  "fake-category-one": {
    "_title": _,
    "_meta-description": _,
    "fake-subcategory-one": {
      "title": _,
      "meta-description": _
    },
    "fake-subcategory-three": {
      "title": _,
      "meta-description": _
    },
    "fake-subcategory-two": {
      "title": _,
      "meta-description": _
    }
  },
  "fake-category-three": {
    "_title": _,
    "_meta-description": _,
    "fake-subcategory-five": {
      "title": _,
      "meta-description": _
    },
    "fake-subcategory-four": {
      "title": _,
      "meta-description": _
    }
  },
  "fake-category-two": {
    "_title": _,
    "_meta-description": _,
    "fake-subcategory-six": {
      "title": _,
      "meta-description": _
    }
  }
} as const satisfies BlogCategoriesArtifact;
type EmptyString = '';
type SubcategoriesMetadatas = Record<'title' | 'meta-description', EmptyString>;
type CategoriesMetadatas = Record<'_title' | '_meta-description', EmptyString> | Record<string, SubcategoriesMetadatas>;
type BlogCategoriesArtifact = Record<string, CategoriesMetadatas>;
export default FAKE_NOT_EMPTY_BLOG_CATEGORIES_MIN_FAKE_BLOG_METADATAS_A;
"
`;

exports[`generateI18nBlogCategories (formatted) > should match snapshot 3`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_NOT_EMPTY_BLOG_CATEGORIES_MIN_FAKE_BLOG_METADATAS_B = {
  "fake-category-one": {
    "_title": _,
    "_meta-description": _,
    "fake-subcategory-one": {
      "title": _,
      "meta-description": _
    },
    "fake-subcategory-three": {
      "title": _,
      "meta-description": _
    },
    "fake-subcategory-two": {
      "title": _,
      "meta-description": _
    }
  },
  "fake-category-three": {
    "_title": _,
    "_meta-description": _,
    "fake-subcategory-five": {
      "title": _,
      "meta-description": _
    },
    "fake-subcategory-four": {
      "title": _,
      "meta-description": _
    }
  },
  "fake-empty-subcategories-nested-in-category": {
    "_title": _,
    "_meta-description": _,
    "fake-subcategory-seven": {
      "title": _,
      "meta-description": _
    },
    "fake-empty-subcategory": {
      "title": _,
      "meta-description": _
    }
  },
  "fake-category-two": {
    "_title": _,
    "_meta-description": _,
    "fake-subcategory-six": {
      "title": _,
      "meta-description": _
    }
  },
  "fake-empty-category": {
    "_title": _,
    "_meta-description": _
  }
} as const satisfies BlogCategoriesArtifact;
type EmptyString = '';
type SubcategoriesMetadatas = Record<'title' | 'meta-description', EmptyString>;
type CategoriesMetadatas = Record<'_title' | '_meta-description', EmptyString> | Record<string, SubcategoriesMetadatas>;
type BlogCategoriesArtifact = Record<string, CategoriesMetadatas>;
export default FAKE_NOT_EMPTY_BLOG_CATEGORIES_MIN_FAKE_BLOG_METADATAS_B;
"
`;

exports[`generateI18nBlogCategories (formatted) > should match snapshot 4`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_EMPTY_EXTRAS_FAKE_BLOG_METADATAS_A = {
  "fake-category-one": {
    "fake-subcategory-one": _,
    "fake-subcategory-three": _,
    "fake-subcategory-two": _
  },
  "fake-category-three": {
    "fake-subcategory-five": _,
    "fake-subcategory-four": _
  },
  "fake-category-two": {
    "fake-subcategory-six": _
  }
} as const satisfies BlogCategoriesArtifact;
type EmptyString = '';
type SubcategoriesMetadatas = EmptyString;
type CategoriesMetadatas = Record<string, SubcategoriesMetadatas>;
type BlogCategoriesArtifact = Record<string, CategoriesMetadatas>;
export default FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_EMPTY_EXTRAS_FAKE_BLOG_METADATAS_A;
"
`;

exports[`generateI18nBlogCategories (formatted) > should match snapshot 5`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_EMPTY_EXTRAS_FAKE_BLOG_METADATAS_B = {
  "fake-category-one": {
    "fake-subcategory-one": _,
    "fake-subcategory-three": _,
    "fake-subcategory-two": _
  },
  "fake-category-three": {
    "fake-subcategory-five": _,
    "fake-subcategory-four": _
  },
  "fake-empty-subcategories-nested-in-category": {
    "fake-subcategory-seven": _,
    "fake-empty-subcategory": _
  },
  "fake-category-two": {
    "fake-subcategory-six": _
  },
  "fake-empty-category": {}
} as const satisfies BlogCategoriesArtifact;
type EmptyString = '';
type SubcategoriesMetadatas = EmptyString;
type CategoriesMetadatas = Record<string, SubcategoriesMetadatas>;
type BlogCategoriesArtifact = Record<string, CategoriesMetadatas>;
export default FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_EMPTY_EXTRAS_FAKE_BLOG_METADATAS_B;
"
`;

exports[`generateI18nBlogCategories (formatted) > should match snapshot 6`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_ONE_EXTRA_FAKE_BLOG_METADATAS_A = {
  "fake-category-one": {
    "_fake": _,
    "fake-subcategory-one": {
      "fake": _
    },
    "fake-subcategory-three": {
      "fake": _
    },
    "fake-subcategory-two": {
      "fake": _
    }
  },
  "fake-category-three": {
    "_fake": _,
    "fake-subcategory-five": {
      "fake": _
    },
    "fake-subcategory-four": {
      "fake": _
    }
  },
  "fake-category-two": {
    "_fake": _,
    "fake-subcategory-six": {
      "fake": _
    }
  }
} as const satisfies BlogCategoriesArtifact;
type EmptyString = '';
type SubcategoriesMetadatas = Record<'fake', EmptyString>;
type CategoriesMetadatas = Record<'_fake', EmptyString> | Record<string, SubcategoriesMetadatas>;
type BlogCategoriesArtifact = Record<string, CategoriesMetadatas>;
export default FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_ONE_EXTRA_FAKE_BLOG_METADATAS_A;
"
`;

exports[`generateI18nBlogCategories (formatted) > should match snapshot 7`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_ONE_EXTRA_FAKE_BLOG_METADATAS_B = {
  "fake-category-one": {
    "_fake": _,
    "fake-subcategory-one": {
      "fake": _
    },
    "fake-subcategory-three": {
      "fake": _
    },
    "fake-subcategory-two": {
      "fake": _
    }
  },
  "fake-category-three": {
    "_fake": _,
    "fake-subcategory-five": {
      "fake": _
    },
    "fake-subcategory-four": {
      "fake": _
    }
  },
  "fake-empty-subcategories-nested-in-category": {
    "_fake": _,
    "fake-subcategory-seven": {
      "fake": _
    },
    "fake-empty-subcategory": {
      "fake": _
    }
  },
  "fake-category-two": {
    "_fake": _,
    "fake-subcategory-six": {
      "fake": _
    }
  },
  "fake-empty-category": {
    "_fake": _
  }
} as const satisfies BlogCategoriesArtifact;
type EmptyString = '';
type SubcategoriesMetadatas = Record<'fake', EmptyString>;
type CategoriesMetadatas = Record<'_fake', EmptyString> | Record<string, SubcategoriesMetadatas>;
type BlogCategoriesArtifact = Record<string, CategoriesMetadatas>;
export default FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_ONE_EXTRA_FAKE_BLOG_METADATAS_B;
"
`;

exports[`generateI18nBlogCategories (formatted) > should match snapshot 8`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_THREE_EXTRAS_FAKE_BLOG_METADATAS_A = {
  "fake-category-one": {
    "_title": _,
    "_meta-description": _,
    "_fake": _,
    "fake-subcategory-one": {
      "title": _,
      "meta-description": _,
      "fake": _
    },
    "fake-subcategory-three": {
      "title": _,
      "meta-description": _,
      "fake": _
    },
    "fake-subcategory-two": {
      "title": _,
      "meta-description": _,
      "fake": _
    }
  },
  "fake-category-three": {
    "_title": _,
    "_meta-description": _,
    "_fake": _,
    "fake-subcategory-five": {
      "title": _,
      "meta-description": _,
      "fake": _
    },
    "fake-subcategory-four": {
      "title": _,
      "meta-description": _,
      "fake": _
    }
  },
  "fake-category-two": {
    "_title": _,
    "_meta-description": _,
    "_fake": _,
    "fake-subcategory-six": {
      "title": _,
      "meta-description": _,
      "fake": _
    }
  }
} as const satisfies BlogCategoriesArtifact;
type EmptyString = '';
type SubcategoriesMetadatas = Record<'title' | 'meta-description' | 'fake', EmptyString>;
type CategoriesMetadatas = Record<'_title' | '_meta-description' | '_fake', EmptyString> | Record<string, SubcategoriesMetadatas>;
type BlogCategoriesArtifact = Record<string, CategoriesMetadatas>;
export default FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_THREE_EXTRAS_FAKE_BLOG_METADATAS_A;
"
`;

exports[`generateI18nBlogCategories (formatted) > should match snapshot 9`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_THREE_EXTRAS_FAKE_BLOG_METADATAS_B = {
  "fake-category-one": {
    "_title": _,
    "_meta-description": _,
    "_fake": _,
    "fake-subcategory-one": {
      "title": _,
      "meta-description": _,
      "fake": _
    },
    "fake-subcategory-three": {
      "title": _,
      "meta-description": _,
      "fake": _
    },
    "fake-subcategory-two": {
      "title": _,
      "meta-description": _,
      "fake": _
    }
  },
  "fake-category-three": {
    "_title": _,
    "_meta-description": _,
    "_fake": _,
    "fake-subcategory-five": {
      "title": _,
      "meta-description": _,
      "fake": _
    },
    "fake-subcategory-four": {
      "title": _,
      "meta-description": _,
      "fake": _
    }
  },
  "fake-empty-subcategories-nested-in-category": {
    "_title": _,
    "_meta-description": _,
    "_fake": _,
    "fake-subcategory-seven": {
      "title": _,
      "meta-description": _,
      "fake": _
    },
    "fake-empty-subcategory": {
      "title": _,
      "meta-description": _,
      "fake": _
    }
  },
  "fake-category-two": {
    "_title": _,
    "_meta-description": _,
    "_fake": _,
    "fake-subcategory-six": {
      "title": _,
      "meta-description": _,
      "fake": _
    }
  },
  "fake-empty-category": {
    "_title": _,
    "_meta-description": _,
    "_fake": _
  }
} as const satisfies BlogCategoriesArtifact;
type EmptyString = '';
type SubcategoriesMetadatas = Record<'title' | 'meta-description' | 'fake', EmptyString>;
type CategoriesMetadatas = Record<'_title' | '_meta-description' | '_fake', EmptyString> | Record<string, SubcategoriesMetadatas>;
type BlogCategoriesArtifact = Record<string, CategoriesMetadatas>;
export default FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_THREE_EXTRAS_FAKE_BLOG_METADATAS_B;
"
`;

exports[`generateI18nBlogCategories (ugly) > should match snapshot 1`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_EMPTY_BLOG_CATEGORIES_MIN = {} as const satisfies BlogCategoriesArtifact;
type EmptyString = '';
    type SubcategoriesMetadatas = Record<'title'|'meta-description', EmptyString>;
    type CategoriesMetadatas = Record<'_title'|'_meta-description', EmptyString>|Record<string, SubcategoriesMetadatas>;
    type BlogCategoriesArtifact = Record<string, CategoriesMetadatas>;
export default FAKE_EMPTY_BLOG_CATEGORIES_MIN;"
`;

exports[`generateI18nBlogCategories (ugly) > should match snapshot 2`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_NOT_EMPTY_BLOG_CATEGORIES_MIN_FAKE_BLOG_METADATAS_A = {"fake-category-one":{"_title":_,"_meta-description":_,"fake-subcategory-one":{"title":_,"meta-description":_},"fake-subcategory-three":{"title":_,"meta-description":_},"fake-subcategory-two":{"title":_,"meta-description":_}},"fake-category-three":{"_title":_,"_meta-description":_,"fake-subcategory-five":{"title":_,"meta-description":_},"fake-subcategory-four":{"title":_,"meta-description":_}},"fake-category-two":{"_title":_,"_meta-description":_,"fake-subcategory-six":{"title":_,"meta-description":_}}} as const satisfies BlogCategoriesArtifact;
type EmptyString = '';
    type SubcategoriesMetadatas = Record<'title'|'meta-description', EmptyString>;
    type CategoriesMetadatas = Record<'_title'|'_meta-description', EmptyString>|Record<string, SubcategoriesMetadatas>;
    type BlogCategoriesArtifact = Record<string, CategoriesMetadatas>;
export default FAKE_NOT_EMPTY_BLOG_CATEGORIES_MIN_FAKE_BLOG_METADATAS_A;"
`;

exports[`generateI18nBlogCategories (ugly) > should match snapshot 3`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_NOT_EMPTY_BLOG_CATEGORIES_MIN_FAKE_BLOG_METADATAS_B = {"fake-category-one":{"_title":_,"_meta-description":_,"fake-subcategory-one":{"title":_,"meta-description":_},"fake-subcategory-three":{"title":_,"meta-description":_},"fake-subcategory-two":{"title":_,"meta-description":_}},"fake-category-three":{"_title":_,"_meta-description":_,"fake-subcategory-five":{"title":_,"meta-description":_},"fake-subcategory-four":{"title":_,"meta-description":_}},"fake-empty-subcategories-nested-in-category":{"_title":_,"_meta-description":_,"fake-subcategory-seven":{"title":_,"meta-description":_},"fake-empty-subcategory":{"title":_,"meta-description":_}},"fake-category-two":{"_title":_,"_meta-description":_,"fake-subcategory-six":{"title":_,"meta-description":_}},"fake-empty-category":{"_title":_,"_meta-description":_}} as const satisfies BlogCategoriesArtifact;
type EmptyString = '';
    type SubcategoriesMetadatas = Record<'title'|'meta-description', EmptyString>;
    type CategoriesMetadatas = Record<'_title'|'_meta-description', EmptyString>|Record<string, SubcategoriesMetadatas>;
    type BlogCategoriesArtifact = Record<string, CategoriesMetadatas>;
export default FAKE_NOT_EMPTY_BLOG_CATEGORIES_MIN_FAKE_BLOG_METADATAS_B;"
`;

exports[`generateI18nBlogCategories (ugly) > should match snapshot 4`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_EMPTY_EXTRAS_FAKE_BLOG_METADATAS_A = {"fake-category-one":{"fake-subcategory-one":_,"fake-subcategory-three":_,"fake-subcategory-two":_},"fake-category-three":{"fake-subcategory-five":_,"fake-subcategory-four":_},"fake-category-two":{"fake-subcategory-six":_}} as const satisfies BlogCategoriesArtifact;
type EmptyString = '';
    type SubcategoriesMetadatas = EmptyString;
    type CategoriesMetadatas = Record<string, SubcategoriesMetadatas>;
    type BlogCategoriesArtifact = Record<string, CategoriesMetadatas>;
export default FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_EMPTY_EXTRAS_FAKE_BLOG_METADATAS_A;"
`;

exports[`generateI18nBlogCategories (ugly) > should match snapshot 5`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_EMPTY_EXTRAS_FAKE_BLOG_METADATAS_B = {"fake-category-one":{"fake-subcategory-one":_,"fake-subcategory-three":_,"fake-subcategory-two":_},"fake-category-three":{"fake-subcategory-five":_,"fake-subcategory-four":_},"fake-empty-subcategories-nested-in-category":{"fake-subcategory-seven":_,"fake-empty-subcategory":_},"fake-category-two":{"fake-subcategory-six":_},"fake-empty-category":{}} as const satisfies BlogCategoriesArtifact;
type EmptyString = '';
    type SubcategoriesMetadatas = EmptyString;
    type CategoriesMetadatas = Record<string, SubcategoriesMetadatas>;
    type BlogCategoriesArtifact = Record<string, CategoriesMetadatas>;
export default FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_EMPTY_EXTRAS_FAKE_BLOG_METADATAS_B;"
`;

exports[`generateI18nBlogCategories (ugly) > should match snapshot 6`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_ONE_EXTRA_FAKE_BLOG_METADATAS_A = {"fake-category-one":{"_fake":_,"fake-subcategory-one":{"fake":_},"fake-subcategory-three":{"fake":_},"fake-subcategory-two":{"fake":_}},"fake-category-three":{"_fake":_,"fake-subcategory-five":{"fake":_},"fake-subcategory-four":{"fake":_}},"fake-category-two":{"_fake":_,"fake-subcategory-six":{"fake":_}}} as const satisfies BlogCategoriesArtifact;
type EmptyString = '';
    type SubcategoriesMetadatas = Record<'fake', EmptyString>;
    type CategoriesMetadatas = Record<'_fake', EmptyString>|Record<string, SubcategoriesMetadatas>;
    type BlogCategoriesArtifact = Record<string, CategoriesMetadatas>;
export default FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_ONE_EXTRA_FAKE_BLOG_METADATAS_A;"
`;

exports[`generateI18nBlogCategories (ugly) > should match snapshot 7`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_ONE_EXTRA_FAKE_BLOG_METADATAS_B = {"fake-category-one":{"_fake":_,"fake-subcategory-one":{"fake":_},"fake-subcategory-three":{"fake":_},"fake-subcategory-two":{"fake":_}},"fake-category-three":{"_fake":_,"fake-subcategory-five":{"fake":_},"fake-subcategory-four":{"fake":_}},"fake-empty-subcategories-nested-in-category":{"_fake":_,"fake-subcategory-seven":{"fake":_},"fake-empty-subcategory":{"fake":_}},"fake-category-two":{"_fake":_,"fake-subcategory-six":{"fake":_}},"fake-empty-category":{"_fake":_}} as const satisfies BlogCategoriesArtifact;
type EmptyString = '';
    type SubcategoriesMetadatas = Record<'fake', EmptyString>;
    type CategoriesMetadatas = Record<'_fake', EmptyString>|Record<string, SubcategoriesMetadatas>;
    type BlogCategoriesArtifact = Record<string, CategoriesMetadatas>;
export default FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_ONE_EXTRA_FAKE_BLOG_METADATAS_B;"
`;

exports[`generateI18nBlogCategories (ugly) > should match snapshot 8`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_THREE_EXTRAS_FAKE_BLOG_METADATAS_A = {"fake-category-one":{"_title":_,"_meta-description":_,"_fake":_,"fake-subcategory-one":{"title":_,"meta-description":_,"fake":_},"fake-subcategory-three":{"title":_,"meta-description":_,"fake":_},"fake-subcategory-two":{"title":_,"meta-description":_,"fake":_}},"fake-category-three":{"_title":_,"_meta-description":_,"_fake":_,"fake-subcategory-five":{"title":_,"meta-description":_,"fake":_},"fake-subcategory-four":{"title":_,"meta-description":_,"fake":_}},"fake-category-two":{"_title":_,"_meta-description":_,"_fake":_,"fake-subcategory-six":{"title":_,"meta-description":_,"fake":_}}} as const satisfies BlogCategoriesArtifact;
type EmptyString = '';
    type SubcategoriesMetadatas = Record<'title'|'meta-description'|'fake', EmptyString>;
    type CategoriesMetadatas = Record<'_title'|'_meta-description'|'_fake', EmptyString>|Record<string, SubcategoriesMetadatas>;
    type BlogCategoriesArtifact = Record<string, CategoriesMetadatas>;
export default FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_THREE_EXTRAS_FAKE_BLOG_METADATAS_A;"
`;

exports[`generateI18nBlogCategories (ugly) > should match snapshot 9`] = `
"// AUTOGENERATED: Don't edit this file!
const _: EmptyString = '';
const FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_THREE_EXTRAS_FAKE_BLOG_METADATAS_B = {"fake-category-one":{"_title":_,"_meta-description":_,"_fake":_,"fake-subcategory-one":{"title":_,"meta-description":_,"fake":_},"fake-subcategory-three":{"title":_,"meta-description":_,"fake":_},"fake-subcategory-two":{"title":_,"meta-description":_,"fake":_}},"fake-category-three":{"_title":_,"_meta-description":_,"_fake":_,"fake-subcategory-five":{"title":_,"meta-description":_,"fake":_},"fake-subcategory-four":{"title":_,"meta-description":_,"fake":_}},"fake-empty-subcategories-nested-in-category":{"_title":_,"_meta-description":_,"_fake":_,"fake-subcategory-seven":{"title":_,"meta-description":_,"fake":_},"fake-empty-subcategory":{"title":_,"meta-description":_,"fake":_}},"fake-category-two":{"_title":_,"_meta-description":_,"_fake":_,"fake-subcategory-six":{"title":_,"meta-description":_,"fake":_}},"fake-empty-category":{"_title":_,"_meta-description":_,"_fake":_}} as const satisfies BlogCategoriesArtifact;
type EmptyString = '';
    type SubcategoriesMetadatas = Record<'title'|'meta-description'|'fake', EmptyString>;
    type CategoriesMetadatas = Record<'_title'|'_meta-description'|'_fake', EmptyString>|Record<string, SubcategoriesMetadatas>;
    type BlogCategoriesArtifact = Record<string, CategoriesMetadatas>;
export default FAKE_NOT_EMPTY_BLOG_CATEGORIES_USING_THREE_EXTRAS_FAKE_BLOG_METADATAS_B;"
`;
